--- a/contato.html
+++ b/contato.html
@@ -46,6 +46,7 @@
 #interface10:hover span.normal{
   display:none;
 }
+		* {cursor: url(lightsabergreen2.cur), default;}
     
     </style>
 </head>
