--- a/links.html
+++ b/links.html
@@ -43,6 +43,7 @@
 #interface10:hover span.normal{
   display:none;
 }
+		* {cursor: url(lightsabergreen2.cur), default;}
     </style>
 </head>
 <body>
