--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ document.write('  '+todaysDate);
   <header id="cabecalho">
 <h1>Sergio Pires Barra</h1>
   </header>
-	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="100" alt="StarWars" title="StarWars"/> </a>
+	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="100" alt="StarWarsBr" title="StarWarsBr"/> </a>
 <img src="imagens/sergiopb.jpg" width="100" height="125">
 <p style="background-color:Tomato;">Profissional.</p>
 <a id="ss" href="profissional.html">Clique aqui para ir a pagina</a>
