--- a/links.html
+++ b/links.html
@@ -51,6 +51,29 @@
 
 <h1>Links.</h1>
 <p>Links de nossos colegas.</p>
+		<ul type="square">
+		<li><a href="https://aquielsburlamaqui.github.io">aquielsburlamaqui</a></li>
+		<li><a href="https://andrielsonsantos.github.io">andrielsonsantos</a></li>
+		<li><a href="https://Jaovv.github.io">Jaovv</a></li>
+      <li><a href="https://joaomcr.github.io">joaomcr</a></li>
+			<li><a href="https://juliobandeira97.github.io/">juliobandeira</a></li>
+			<li><a href="https://victorkaillo.github.io">victorkaillo</a></li>
+			<li><a href="https://arthzzz.github.io">arthzzz</a></li>
+			<li><a href="https://github.com/lariskelmer">lariskelmer</a></li>
+			<li><a href="https://mofreitas.github.io/">mofreitas</a></li>
+			<li><a href="https://lucasvn.github.io/">lucasvn</a></li>
+			<li><a href="https://hiltonjr.github.io/">hiltonjr</a></li>
+			<li><a href="https://github.com/samcost">samcost</a></li>
+			<li><a href="https://marcelofilgueira.github.io/">marcelofilgueira</a></li>
+			<li><a href="https://ana-beatriz-marinho.github.io/">ana-beatriz-marinho</a></li>
+			<li><a href="http://falemao.github.io/">falemao</a></li>
+			<li><a href="http://jeffersondenilson.github.io/">jeffersondenilson</a></li>
+			<li><a href="https://amadeupb36.github.io/index.html">amadeupb36</a></li>
+			<li><a href="https://carlosmirandaf.github.io/">carlosmirandaf</a></li>
+			<li><a href="https://glauberc.github.io/">glauberc</a></li>
+			<li><a href="https://magnusbrigido.github.io/">magnusbrigido</a></li>
+		</ul>
+
 		<div id="interface10">
 <a id="ss" href="index.html">Voltar.</a>
     <span class="normal">
