--- a/contato.html
+++ b/contato.html
@@ -54,17 +54,21 @@
   <div id="interface">
 
 <h1>Contato.</h1>
-<form action="/action_page.php">
-  First name:<br>
-  <input type="text" name="firstname" value="Mickey">
-  <br>
-  Last name:<br>
-  <input type="text" name="lastname" value="Mouse">
-  <br><br>
-  <input type="submit" value="Submit">
-</form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "gmail".</p>
+		<form name="formulario" action="http://scripts.redehost.com.br/formmail.aspx" method="post">
+<input type=hidden name="destino" value="sergiopires201491@gmail.com">
+<input type=hidden name="enviado" value="http://www.seudominio.xxx.yy/enviado.htm">
+<p><b>Nome:</b><br>
+<input type=text name="nome" size="45"></p><br>
+<p><b>Email:</b><br>
+<input type=text name="email" size="45"></p><br>
+<p><b>Assunto:</b><br>
+<input type=text name="assunto" size="45"></p><br>
+<p><b>Mensagem:</b><br>
+<textarea name="Mensagem" rows="10" cols="60" wrap="virtual"></textarea></p><br>
+<p><input type="submit" value="Enviar Email"> <input type="reset" value="Limpar Formulário"></p>
+</form>
+		
 		<div id="interface10">
 <a id="ss" href="index.html">Voltar.</a>
     <span class="normal">
