modf. em contatos index e lazer

--- a/contato.html
+++ b/contato.html
@@ -46,6 +46,12 @@
 #interface10:hover span.normal{
   display:none;
 }
+			div#interface hgroup#cont {
+			position: absolute;
+			opacity: 1;
+			top: 80px;
+			left: 360px;
+		}
 		* {cursor: url(lightsabergreen2.cur), default;}
     
     </style>
@@ -54,20 +60,20 @@
   <div id="interface">
 
 <h1>Contato.</h1>
-
-		<form name="formulario" action="http://scripts.redehost.com.br/formmail.aspx" method="post">
-<input type=hidden name="destino" value="sergiopires201491@gmail.com">
-<input type=hidden name="enviado" value="http://www.seudominio.xxx.yy/enviado.htm">
-<p><b>Nome:</b><br>
-<input type=text name="nome" size="45"></p><br>
-<p><b>Email:</b><br>
-<input type=text name="email" size="45"></p><br>
-<p><b>Assunto:</b><br>
-<input type=text name="assunto" size="45"></p><br>
-<p><b>Mensagem:</b><br>
-<textarea name="Mensagem" rows="10" cols="60" wrap="virtual"></textarea></p><br>
-<p><input type="submit" value="Enviar Email"> <input type="reset" value="Limpar Formulário"></p>
-</form>
+		<figure>
+		<img src="imagens/CONTATO.png"/>
+		</figure>
+		<hgroup id="cont">
+		<h2>Phone: (84)99698-1760</h2>
+			<br/>
+			<br/>
+			<br/>
+		<h2>Github: </h2>
+				<br/>
+			<br/>
+			<br/>
+		<h2>Email: sergiopires201491@gmail.com</h2>
+		</hgroup>
 		
 		<div id="interface10">
 <a id="ss" href="index.html">Voltar.</a>
