--- a/lazer.html
+++ b/lazer.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Lazer</title>
+	<meta charset="UTF-8"/>
+<title>Área de Lazer</title>
   <style>
   body{
           background-color: #dddddd;
@@ -43,16 +44,55 @@
 #interface10:hover span.normal{
   display:none;
 }
+		body#idd img#id {
+			position: absolute;
+			top: 0px;
+			left: 5px;
+		}
+		
 		* {cursor: url(lightsabergreen2.cur), default;}
     </style>
 </head>
+	  <script type="text/javascript">
+function slide1(){
+document.getElementById('id').src="imagens/alucard.jpg";
+setTimeout("slide2()", 3000)
+}
+ 
+function slide2(){
+document.getElementById('id').src="imagens/kaneki.jpg";
+setTimeout("slide3()", 3000)
+}
+ 
+function slide3(){
+document.getElementById('id').src="imagens/dragonball.png";
+setTimeout("slide1()", 3000)
+}
+</script>
+<body id="idd" onLoad="slide1()">
+<img id="id" width="1340" border="0"/>
 <body>
   <div id="interface">
-
-<h1>Lazer</h1>
+<br/>
+<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+<h1>Área de Lazer</h1>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/hJY7vut52pQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<p>Leitura, Games online(Counter-Strike)<br>E fora da Universidade eu gosto de Assistir a seriados e animes. Como The Flash, GOT, DragonBall Super.</p>
-<p>obs.: Alguns dos canais do youtube que Acompanho:<br>
+<p>Gosto de Leitura, Games online(Counter-Strike)<br>E fora da Universidade eu gosto de Assistir a seriados e animes. Como The Flash, GOT, DragonBall Super.</p>
+<p>obs.: Aqui está alguns dos canais do youtube que Acompanho:<br>
   <a href="https://www.youtube.com/channel/UCe6pKugTDyOPT1Md2DTybbQ">7 Minutoz.</a><br>
   <a href="https://www.youtube.com/channel/UC_NVYGhfkd7aXYqp-4rLFWA">Player Tauz.</a><br>
   <a href="https://www.youtube.com/user/videosdokame">Casa do Kame.</a>
