--- a/index.html
+++ b/index.html
@@ -68,15 +68,23 @@
 		div#interface img#sab {
 			position: absolute;
 			opacity: 1;
-			top: 245px;
-			left: 500px;
+			top: 580px;
+			left: 590px;
 		}
 		
     div#clock {
 			position: absolute;
-			left: 880px; 
+			left: 900px; 
 			top: 10px;
+			font-family: Arial, sans-serif;
+			font-size: 10pt;
+			color: #888888;
 
+		}
+		div#interface h3{
+			font-family: Arial, sans-serif;
+			font-size: 15pt;
+			color: #888888;
 		}
   * {cursor: url(lightsabergreen2.cur), default;}
 
@@ -148,8 +156,9 @@ document.write('  '+todaysDate);
 	</div>
 <div id="interface">
   <header id="cabecalho">
-<h1>Sergio Pires Barra</h1>
+<h1>Sérgio Pires Barra</h1>
   </header>
+	<h3>Bem vindo ao meu site!</h3>
 	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="100" alt="StarWarsBr" title="StarWarsBr"/> </a>
 <img src="imagens/sergiopb.jpg" width="100" height="125">
 <p style="background-color:Tomato;">Profissional.</p>
