manipulacao de fontes e banner

--- a/contato.html
+++ b/contato.html
@@ -3,6 +3,10 @@
 <head>
 <title>Contato.</title>
   <style>
+		@font-face {
+	font-family: 'FonteC';
+	src: url("fontes/bubblegum-sans-regular.otf");
+}
   body{
           background-color: #dddddd;
           color: rgba(0, 0, 0, 1);
@@ -15,7 +19,7 @@
 	    	padding: 10px 10px 10px 10px;
 	    }
     h1 {
-			font-family: Arial, sans-serif;
+			font-family: 'FonteC', sans-serif;
 			font-size: 30pt;
 			color: #606060;
 			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
@@ -53,10 +57,13 @@
 			left: 360px;
 		}
 		* {cursor: url(lightsabergreen2.cur), default;}
+		body#fon {
+			font-family: 'FonteC';
+		}
     
     </style>
 </head>
-<body>
+<body id="fon">
   <div id="interface">
 
 <h1>Contato.</h1>
