--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8"/>
 <title>Sergio Pires Barra</title>
   <style>
+		@font-face {
+	font-family: 'FonteC';
+	src: url("fontes/bubblegum-sans-regular.otf");
+}
   body{
           background-image: url("https://ogimg.infoglobo.com.br/in/19145023-287-d7d/FT1500A/550/nasanebulaprince.jpg");
           color: rgba(0, 0, 0, 1);
@@ -16,7 +20,7 @@
 	    	padding: 10px 10px 10px 10px;
 	    }
     header#cabecalho h1{
-			font-family: Arial, sans-serif;
+			font-family: 'FonteC', sans-serif;
 			font-size: 30pt;
 			color: #606060;
 			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
@@ -74,17 +78,20 @@
 		
     div#clock {
 			position: absolute;
-			left: 900px; 
+			left: 830px; 
 			top: 10px;
-			font-family: Arial, sans-serif;
-			font-size: 10pt;
+			font-family: 'FonteC', sans-serif;
+			font-size: 15pt;
 			color: #888888;
 
 		}
 		div#interface h3{
-			font-family: Arial, sans-serif;
+			font-family: 'FonteC', sans-serif;
 			font-size: 15pt;
 			color: #888888;
+		}
+		div#interface {
+			font-family: 'FonteC', sans-serif;
 		}
   * {cursor: url(lightsabergreen2.cur), default;}
 
@@ -161,9 +168,9 @@ document.write('  '+todaysDate);
 	<h3>Bem vindo ao meu site!</h3>
 	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="100" alt="StarWarsBr" title="StarWarsBr"/> </a>
 <img src="imagens/sergiopb.jpg" width="100" height="125">
-<p style="background-color:Tomato;">Profissional.</p>
+<p style="background-color:Tomato;">Perfil Profissional.</p>
 <a id="ss" href="profissional.html">Clique aqui para ir a pagina</a>
-<p style="background-color:DodgerBlue;">Lazer.</p>
+<p style="background-color:DodgerBlue;">Área de Lazer.</p>
 <a id="dd" href="lazer.html">Clique aqui para ir a pagina</a>
 <p style="background-color:MediumSeaGreen;">Contato.</p>
 <a id="ff" href="contato.html">Clique aqui para ir a pagina</a>
