--- a/links.html
+++ b/links.html
@@ -3,6 +3,10 @@
 <head>
 <title>Links</title>
   <style>
+		@font-face {
+	font-family: 'FonteC';
+	src: url("fontes/bubblegum-sans-regular.otf");
+}
   body{
           background-color: #dddddd;
           color: rgba(0, 0, 0, 1);
@@ -13,9 +17,10 @@
 	    	margin: -20px auto 0px auto;
 	    	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
 	    	padding: 10px 10px 10px 10px;
+			  font-family: 'FonteC';
 	    }
     h1 {
-			font-family: Arial, sans-serif;
+			font-family: 'FonteC', sans-serif;
 			font-size: 30pt;
 			color: #606060;
 			text-shadow: 1px 1px 1px #ffffff;
@@ -52,18 +57,17 @@
 <h1>Links.</h1>
 <p>Links de nossos colegas.</p>
 		<ul type="square">
-		<li><a href="https://aquielsburlamaqui.github.io">aquielsburlamaqui</a></li>
 		<li><a href="https://andrielsonsantos.github.io">andrielsonsantos</a></li>
 		<li><a href="https://Jaovv.github.io">Jaovv</a></li>
       <li><a href="https://joaomcr.github.io">joaomcr</a></li>
 			<li><a href="https://juliobandeira97.github.io/">juliobandeira</a></li>
 			<li><a href="https://victorkaillo.github.io">victorkaillo</a></li>
 			<li><a href="https://arthzzz.github.io">arthzzz</a></li>
-			<li><a href="https://github.com/lariskelmer">lariskelmer</a></li>
+			<li><a href="https://lariskelmer.github.io/">lariskelmer</a></li>
 			<li><a href="https://mofreitas.github.io/">mofreitas</a></li>
 			<li><a href="https://lucasvn.github.io/">lucasvn</a></li>
 			<li><a href="https://hiltonjr.github.io/">hiltonjr</a></li>
-			<li><a href="https://github.com/samcost">samcost</a></li>
+			<li><a href="https://samcost.github.io/">samcost</a></li>
 			<li><a href="https://marcelofilgueira.github.io/">marcelofilgueira</a></li>
 			<li><a href="https://ana-beatriz-marinho.github.io/">ana-beatriz-marinho</a></li>
 			<li><a href="http://falemao.github.io/">falemao</a></li>
