--- a/profissional.html
+++ b/profissional.html
@@ -3,6 +3,10 @@
 <head>
 <title>Perfil profissional.</title>
    <style>
+		 @font-face {
+	font-family: 'FonteC';
+	src: url("fontes/bubblegum-sans-regular.otf");
+}
   body{
           background-color: #dddddd;
           color: rgba(0, 0, 0, 1);
@@ -13,9 +17,10 @@
 	    	margin: -20px auto 0px auto;
 	    	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
 	    	padding: 10px 10px 10px 10px;
+			  font-family: 'FonteC';
 	    }
     h1 {
-			font-family: Arial, sans-serif;
+			font-family: 'FonteC', sans-serif;
 			font-size: 30pt;
 			color: #606060;
 			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
