--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"/>
-<title>Sergio Pires Barra</title>
+<title>Sérgio Pires Barra</title>
   <style>
 		@font-face {
 	font-family: 'FonteC';
@@ -32,41 +32,40 @@
       margin-bottom: 0px;
     }
     
-    div#interface a#ss:hover {
+    div#interface a#ss:hover,a#dd:hover,a#ff:hover,a#gg:hover {
       background-color: #c6c6c6;
-      color: #ffffff;
+			border: 2px solid #c6c6c6;
+    border-radius: 15px;
+    box-sizing: border-box;
+			   width: 111px;
     }
-    div#interface a#dd:hover {
-      background-color: #c6c6c6;
-      color: #ffffff;
-    }
-    div#interface a#ff:hover {
-      background-color: #c6c6c6;
-      color: #ffffff;
-    }
-    div#interface a#gg:hover {
-      background-color: #c6c6c6;
-      color: #ffffff;
-    }
-     div#interface a#ss {
-			color: #ff6347;
+		 div#interface a#ss:hover {
+			color: #ffffff;}
+		 div#interface a#dd:hover {
+			color: #ffffff;}
+		 div#interface a#ff:hover {
+			color: #ffffff;}
+		 div#interface a#gg:hover {
+			color: #ffffff;}
+		
+     div#interface a#ss, a#dd, a#ff, a#gg {
 			text-decoration: none;
        transition: background-color 1s;
+			  transition: border 1s;
+			 transition: color 1s;
+			 border: none;
+		}
+		div#interface a#ss{
+		color: #ff6347;
 		}
       div#interface a#dd {
 			color: #1e90ff;
-			text-decoration: none;
-       transition: background-color 1s;
 		}
     div#interface a#ff {
 			color: #3cb371;
-			text-decoration: none;
-       transition: background-color 1s;
 		}
     div#interface a#gg {
 			color: #808080;
-			text-decoration: none;
-       transition: background-color 1s;
 		}
 		
 		div#interface img#sab {
@@ -169,13 +168,13 @@ document.write('  '+todaysDate);
 	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="100" alt="StarWarsBr" title="StarWarsBr"/> </a>
 <img src="imagens/sergiopb.jpg" width="100" height="125">
 <p style="background-color:Tomato;">Perfil Profissional.</p>
-<a id="ss" href="profissional.html">Clique aqui para ir a pagina</a>
+<a id="ss" href="profissional.html">Clique aqui para ir a página</a>
 <p style="background-color:DodgerBlue;">Área de Lazer.</p>
-<a id="dd" href="lazer.html">Clique aqui para ir a pagina</a>
+<a id="dd" href="lazer.html">Clique aqui para ir a página</a>
 <p style="background-color:MediumSeaGreen;">Contato.</p>
-<a id="ff" href="contato.html">Clique aqui para ir a pagina</a>
+<a id="ff" href="contato.html">Clique aqui para ir a página</a>
 <p style="background-color:Gray;">Links.</p>
-<a id="gg" href="links.html">Clique aqui para ir a pagina</a><br>
+<a id="gg" href="links.html">Clique aqui para ir a página</a><br>
 <p id="v">visitantes:</p>
 <a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=php-ubuntu-sergiopires201491269500.codeanyapp.com/dsi/projeto01/index.html&digit=style/plain/1/&reloads=0" alt="www.reliablecounter.com" title="www.reliablecounter.com" border="0"></a><br /><a href="http://www.reliablecounter.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;"></a>
   </div>
