--- a/profissional.html
+++ b/profissional.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8"/>
 <title>Perfil profissional.</title>
    <style>
 		 @font-face {
@@ -27,14 +28,14 @@
 			padding: 0px;
 			margin-bottom: 10px;
 		}
-     div#interface a#ss:hover {
-      background-color: #c6c6c6;
-      color: #ffffff;
+        div#interface a#ss:hover {
+      color: red;
     }
      div#interface a#ss {
 			color: #ffffff;
 			text-decoration: none;
-       transition: background-color 1s;
+			 text-shadow: 1px 1px 1px #ffffff;
+       transition: color 1s;
 		}
 		 #interface10 span.alternativo{
  display:none;
@@ -55,7 +56,7 @@
     <div id="interface">
   <h1>Perfil profissional.</h1>
  <img src="https://image.flaticon.com/icons/png/512/31/31625.png" width="200" height="200">
-<p>Nome: Sergio Pires Barra.<br>Nascimento:09/10/1995.<br>Estudante de Bacharelado de Ciencias e Tecnologia da UFRN.<br>Esperiencias:<br>Um pouco de IOT, C++, Scratch, Arduino.</p>
+<p>Nome: Sérgio Pires Barra.<br>Nascimento: 09/10/1995.<br>Local de nascimento: Belém-PA.<br>Atualmente: Estudante de Bacharelado de Ciências e Tecnologia da UFRN.<br>Esperiências:<br>Um pouco de IOT, Html, C++, Scratch, Arduino.</p>
 		<div id="interface10">
 <a id="ss" href="index.html">Voltar.</a>
     <span class="normal">
