--- a/lazer.html
+++ b/lazer.html
@@ -28,13 +28,13 @@
 			margin-bottom: 10px;
 		}
       div#interface a#ss:hover {
-      background-color: #c6c6c6;
-      color: #ffffff;
+      color: red;
     }
      div#interface a#ss {
 			color: #ffffff;
 			text-decoration: none;
-       transition: background-color 1s;
+			 text-shadow: 1px 1px 1px #ffffff;
+       transition: color 1s;
 		}
 		div#interface {
 			font-family: 'FonteC';
@@ -55,6 +55,23 @@
 			position: absolute;
 			top: 0px;
 			left: 5px;
+		}
+		/* botoes dos links*/
+		div#interface a#b1:hover, a#b2:hover ,a#b3:hover {
+      background-color: #999999;
+    border: 2px solid #999999;
+    border-radius: 15px;
+    box-sizing: border-box;
+    width: 111px;
+     color: #ffffff;
+    }
+		div#interface a#b1,a#b2,a#b3 {
+			color: #ff6347;
+			text-shadow: 1px 1px 1px #ffffff;
+			text-decoration: none;
+			 border: none;
+       transition: background-color 1s;
+			 transition: border 1s;
 		}
 		
 		* {cursor: url(lightsabergreen2.cur), default;}
@@ -105,9 +122,9 @@ document.getElementById('aId').title="Goku";
  <iframe width="560" height="315" src="https://www.youtube.com/embed/hJY7vut52pQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <p>Gosto de Leitura, Games online(Counter-Strike)<br>E fora da Universidade eu gosto de Assistir a seriados e animes. Como The Flash, GOT, DragonBall Super.</p>
 <p>obs.: Aqui está alguns dos canais do youtube que Acompanho:<br>
-  <a href="https://www.youtube.com/channel/UCe6pKugTDyOPT1Md2DTybbQ">7 Minutoz.</a><br>
-  <a href="https://www.youtube.com/channel/UC_NVYGhfkd7aXYqp-4rLFWA">Player Tauz.</a><br>
-  <a href="https://www.youtube.com/user/videosdokame">Casa do Kame.</a>
+  <a id="b1" href="https://www.youtube.com/channel/UCe6pKugTDyOPT1Md2DTybbQ">7 Minutoz.</a><br>
+  <a id="b2" href="https://www.youtube.com/channel/UC_NVYGhfkd7aXYqp-4rLFWA">Player Tauz.</a><br>
+  <a id="b3" href="https://www.youtube.com/user/videosdokame">Casa do Kame.</a>
     <p> </p>
  
 		<div id="interface10">
