backgrounds de paginas

--- a/lazer.html
+++ b/lazer.html
@@ -9,7 +9,7 @@
 	src: url("fontes/bubblegum-sans-regular.otf");
 }
   body{
-          background-color: #dddddd;
+          background: url("imagens/anime.jpg") fixed;
           color: rgba(0, 0, 0, 1);
 	    }
     div#interface {
@@ -57,7 +57,7 @@
 			left: 5px;
 		}
 		/* botoes dos links*/
-		div#interface a#b1:hover, a#b2:hover ,a#b3:hover {
+		div#links1 a:hover {
       background-color: #999999;
     border: 2px solid #999999;
     border-radius: 15px;
@@ -65,7 +65,7 @@
     width: 111px;
      color: #ffffff;
     }
-		div#interface a#b1,a#b2,a#b3 {
+		div#links1 a {
 			color: #ff6347;
 			text-shadow: 1px 1px 1px #ffffff;
 			text-decoration: none;
@@ -122,9 +122,14 @@ document.getElementById('aId').title="Goku";
  <iframe width="560" height="315" src="https://www.youtube.com/embed/hJY7vut52pQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <p>Gosto de Leitura, Games online(Counter-Strike)<br>E fora da Universidade eu gosto de Assistir a seriados e animes. Como The Flash, GOT, DragonBall Super.</p>
 <p>obs.: Aqui está alguns dos canais do youtube que Acompanho:<br>
+	<div id="links1">
   <a id="b1" href="https://www.youtube.com/channel/UCe6pKugTDyOPT1Md2DTybbQ">7 Minutoz.</a><br>
   <a id="b2" href="https://www.youtube.com/channel/UC_NVYGhfkd7aXYqp-4rLFWA">Player Tauz.</a><br>
-  <a id="b3" href="https://www.youtube.com/user/videosdokame">Casa do Kame.</a>
+  <a id="b3" href="https://www.youtube.com/user/videosdokame">Casa do Kame.</a><br>
+	<a id="b4" href="https://www.youtube.com/channel/UCrnkcQXIXfpgpZacBR8P_mg/">Kuma Cômico - Redublagens.</a><br>
+	<a id="b5" href="https://www.youtube.com/channel/UCZFqqE6x_fPkwLDse0WaC0g/">Pabollo - Redublagens.</a><br>
+	<a id="b6" href="https://www.youtube.com/user/voicemakers1">Voice Makers.</a>
+		</div>
     <p> </p>
  
 		<div id="interface10">
