--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 	<meta charset="UTF-8"/>
 <title>Sérgio Pires Barra</title>
@@ -13,23 +14,50 @@
           color: rgba(0, 0, 0, 1);
 	    }
     div#interface {
-	    	width: 900px;
+	    	width: 950px;
 	    	background-color: #ebebeb;
 	    	margin: -20px auto 0px auto;
 	    	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
 	    	padding: 10px 10px 10px 10px;
 	    }
+		header#cabecalho {
+			height: 50px;
+		}
+		section#corpo {
+			display: block;
+			width: 520px;
+			float: left;
+			border-right: 1px solid #000000;
+			padding-right: 15px; 
+		}
+		aside#lateral {
+			display: block;
+			width: 400px;
+			float: right;
+		}
+		footer#rodape {
+			clear: both;
+			border-top: 1px solid #000000;
+		}
+		footer#rodape img {
+      margin-bottom: 0px;
+			padding: 0px;
+		}
+		
     header#cabecalho h1{
 			font-family: 'FonteC', sans-serif;
 			font-size: 30pt;
 			color: #606060;
 			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
 			padding: 0px;
-			margin-bottom: 10px;
+			margin-bottom: 0px;
 		}
     
-    div#interface p#v {
-      margin-bottom: 0px;
+		div#interface p#v {
+			font-size: 12pt;
+      padding: 0px;
+			margin-top: 0px;
+			margin-bottom: 0px;
     }
     
     div#interface a#ss:hover,a#dd:hover,a#ff:hover,a#gg:hover {
@@ -71,13 +99,15 @@
 		div#interface img#sab {
 			position: absolute;
 			opacity: 1;
-			top: 580px;
-			left: 590px;
+			top: 650px;
+			left: 1050px;
+			padding: 0px;
+			margin: 0px;
 		}
 		
     div#clock {
 			position: absolute;
-			left: 830px; 
+			left: 800px; 
 			top: 10px;
 			font-family: 'FonteC', sans-serif;
 			font-size: 15pt;
@@ -89,14 +119,26 @@
 			font-size: 15pt;
 			color: #888888;
 		}
+		div#interface img#sfoto{
+			border: 2px solid white;
+			box-shadow: 1px 1px 4px black;
+		}
 		div#interface {
 			font-family: 'FonteC', sans-serif;
+		}
+		div#slide1 {
+			border: 2px solid white;
+			box-shadow: 1px 1px 4px black;
+			position: relative;
+			left: -3px;
+			margin: none;
+			padding: 0px;
 		}
   * {cursor: url(lightsabergreen2.cur), default;}
 
   </style>
 </head>
-<body>
+<body>	
 	<div id="clock">
 	<SCRIPT LANGUAGE="JAVASCRIPT">
 <!--
@@ -164,9 +206,10 @@ document.write('  '+todaysDate);
   <header id="cabecalho">
 <h1>Sérgio Pires Barra</h1>
   </header>
+	<section id="corpo">
 	<h3>Bem vindo ao meu site!</h3>
-	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="100" alt="StarWarsBr" title="StarWarsBr"/> </a>
-<img src="imagens/sergiopb.jpg" width="100" height="125">
+	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="120" alt="StarWarsBr" title="StarWarsBr"/> </a>
+<img id="sfoto" src="imagens/sergiopb.jpg" width="100" height="125">
 <p style="background-color:Tomato;">Perfil Profissional.</p>
 <a id="ss" href="profissional.html">Clique aqui para ir a página</a>
 <p style="background-color:DodgerBlue;">Área de Lazer.</p>
@@ -175,8 +218,39 @@ document.write('  '+todaysDate);
 <a id="ff" href="contato.html">Clique aqui para ir a página</a>
 <p style="background-color:Gray;">Links.</p>
 <a id="gg" href="links.html">Clique aqui para ir a página</a><br>
+		<br/>
+	</section>
+	<h2> &nbsp;Minhas Fotos.<h2>
+	<aside id="lateral">
+		<div id="slide1">
+	<div class="w3-content w3-section" style="max-width:600px">
+  <img class="mySlides" src="imagens/IMG1.jpg" style="width:100%">
+  <img class="mySlides" src="imagens/IMG2.jpg" style="width:100%">
+  <img class="mySlides" src="imagens/IMG3.jpg" style="width:100%">
+</div>
+	<script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+       x[i].style.display = "none";  
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}    
+    x[myIndex-1].style.display = "block";  
+    setTimeout(carousel, 2000); // Change image every 2 seconds
+}
+</script>
+	</div>
+		<p> </p>
+	</aside>
+	<footer id="rodape">
 <p id="v">visitantes:</p>
-<a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=php-ubuntu-sergiopires201491269500.codeanyapp.com/dsi/projeto01/index.html&digit=style/plain/1/&reloads=0" alt="www.reliablecounter.com" title="www.reliablecounter.com" border="0"></a><br /><a href="http://www.reliablecounter.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;"></a>
+<a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=php-ubuntu-sergiopires201491269500.codeanyapp.com/dsi/projeto01/index.html&digit=style/plain/1/&reloads=0" alt="www.reliablecounter.com" title="www.reliablecounter.com" border="0"></a>
+	</footer>
   </div>
   </body>
 </html>
