gifs e links add

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		div#interface img#sab {
 			position: absolute;
 			opacity: 1;
-			top: 650px;
+			top: 670px;
 			left: 1050px;
 			padding: 0px;
 			margin: 0px;
@@ -218,6 +218,7 @@ document.write('  '+todaysDate);
 <a id="ff" href="contato.html">Clique aqui para ir a página</a>
 <p style="background-color:Gray;">Links.</p>
 <a id="gg" href="links.html">Clique aqui para ir a página</a><br>
+		<img src="imagens/glass5.gif" width="35" alt="Z zz..." title="Z zz..."/>
 		<br/>
 	</section>
 	<h2> &nbsp;Minhas Fotos.<h2>
