fonte h2 no index

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
 			padding: 0px;
 			margin-bottom: 0px;
 		}
+		h2{
+			font-family: 'FonteC', sans-serif;
+			color: #606060;
+			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+		}
     
 		div#interface p#v {
 			font-size: 12pt;
