criacao de arquivo css

--- a/lazer.html
+++ b/lazer.html
@@ -1,143 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<meta charset="UTF-8"/>
 <title>Área de Lazer</title>
   <style>
-		@font-face {
-	font-family: 'FonteC';
-	src: url("fontes/bubblegum-sans-regular.otf");
-}
 		header#cabecalho {
 			height: 285px;
 		}
   body{
           background: url("imagens/anime.jpg") fixed;
-          color: rgba(0, 0, 0, 1);
 	    }
-		section#corpo {
-			display: block;
-			width: 520px;
-			float: left;
-			border-right: 1px solid #000000;
-			padding-right: 15px; 
-		}
-		aside#lateral {
-			display: block;
-			width: 400px;
-			float: right;
-		}
-		footer#rodape {
-			clear: both;
-			border-top: 1px solid #000000;
-		}
     div#interface {
-	    	width: 950px;
 	    	background-color: #1e90ff;
 	    	margin: 0px auto 0px auto;
-	    	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
-	    	padding: 10px 10px 10px 10px;
 	    }
-    h1 {
-			font-family: 'FonteC', sans-serif;
-			font-size: 30pt;
-			color: #606060;
-			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
-			padding: 0px;
-			margin-bottom: 10px;
-			margin-top: 0px;
-		}
 		h2 {
-			font-family: 'FonteC', sans-serif;
 			font-size: 20pt;
 			color: #888888;
-			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
 			padding: 0px;
 			margin-bottom: 0px;
 			margin-top: 15px;
 		}
-		h6 {
-				font-family: 'FonteC', sans-serif;
-			color: #000000;
-			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
-			padding: 0px;
-			margin-top: 0px;
-			margin-bottom: 3px;
-		}
-      div#interface a#ss:hover {
-      color: red;
-    }
-     div#interface a#ss {
-			color: #ffffff;
-			text-decoration: none;
-			 text-shadow: 1px 1px 1px #ffffff;
-       transition: color 1s;
-		}
 		div#interface {
 			font-family: 'FonteC';
 		}
-		#interface10 span.alternativo{
- display:none;
-}
-#interface10:hover span.alternativo{
-  display:block;
-}
-#interface10 span.normal{
- display:block;
-}
-#interface10:hover span.normal{
-  display:none;
-}
-		body#idd img#id {
-			position: absolute;
-			top: 0px;
-			left: 5px;
-		}
-		aside#lateral img#domi {
-			position: relative;
-			width: 100%;
-			left: 0px;
-			margin: 0px;
-			padding: 0px;
-		}
-		/* botoes dos links*/
-		div#links1 a:hover {
-      background-color: #999999;
-    border: 2px solid #999999;
-    border-radius: 15px;
-    box-sizing: border-box;
-    width: 111px;
-     color: #ffffff;
-    }
-		div#links1 a {
-			color: #ff6347;
-			text-shadow: 1px 1px 1px #ffffff;
-			text-decoration: none;
-			 border: none;
-       transition: background-color 1s;
-			 transition: border 1s;
-		}
-		div#interface a#b7:hover {
-      background-color: #999999;
-    border: 2px solid #999999;
-    border-radius: 15px;
-    box-sizing: border-box;
-    width: 111px;
-     color: #ffffff;
-    }
-		div#interface a#b7 {
-			color: #ff6347;
-			text-shadow: 1px 1px 1px #ffffff;
-			text-decoration: none;
-			 border: none;
-       transition: background-color 1s;
-			 transition: border 1s;
-		}
-		div#vatual iframe {
-			width: 100%;
-		}
-		
-		* {cursor: url(lightsabergreen2.cur), default;}
     </style>
 </head>
 	<header id="cabecalho">
