--- a/index.html
+++ b/index.html
@@ -2,146 +2,9 @@
 <html>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<meta charset="UTF-8"/>
 <title>Sérgio Pires Barra</title>
-  <style>
-		@font-face {
-	font-family: 'FonteC';
-	src: url("fontes/bubblegum-sans-regular.otf");
-}
-  body{
-          background-image: url("https://ogimg.infoglobo.com.br/in/19145023-287-d7d/FT1500A/550/nasanebulaprince.jpg");
-          color: rgba(0, 0, 0, 1);
-	    }
-    div#interface {
-	    	width: 950px;
-	    	background-color: #ebebeb;
-	    	margin: -20px auto 0px auto;
-	    	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
-	    	padding: 10px 10px 10px 10px;
-	    }
-		header#cabecalho {
-			height: 50px;
-		}
-		section#corpo {
-			display: block;
-			width: 520px;
-			float: left;
-			border-right: 1px solid #000000;
-			padding-right: 15px; 
-		}
-		aside#lateral {
-			display: block;
-			width: 400px;
-			float: right;
-		}
-		footer#rodape {
-			clear: both;
-			border-top: 1px solid #000000;
-		}
-		footer#rodape img {
-      margin-bottom: 0px;
-			padding: 0px;
-		}
-		
-    header#cabecalho h1{
-			font-family: 'FonteC', sans-serif;
-			font-size: 30pt;
-			color: #606060;
-			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
-			padding: 0px;
-			margin-bottom: 0px;
-		}
-		h2{
-			font-family: 'FonteC', sans-serif;
-			color: #606060;
-			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
-		}
-    
-		div#interface p#v {
-			font-size: 12pt;
-      padding: 0px;
-			margin-top: 0px;
-			margin-bottom: 0px;
-    }
-    
-    div#interface a#ss:hover,a#dd:hover,a#ff:hover,a#gg:hover {
-      background-color: #c6c6c6;
-			border: 2px solid #c6c6c6;
-    border-radius: 15px;
-    box-sizing: border-box;
-			   width: 111px;
-    }
-		 div#interface a#ss:hover {
-			color: #ffffff;}
-		 div#interface a#dd:hover {
-			color: #ffffff;}
-		 div#interface a#ff:hover {
-			color: #ffffff;}
-		 div#interface a#gg:hover {
-			color: #ffffff;}
-		
-     div#interface a#ss, a#dd, a#ff, a#gg {
-			text-decoration: none;
-       transition: background-color 1s;
-			  transition: border 1s;
-			 transition: color 1s;
-			 border: none;
-		}
-		div#interface a#ss{
-		color: #ff6347;
-		}
-      div#interface a#dd {
-			color: #1e90ff;
-		}
-    div#interface a#ff {
-			color: #3cb371;
-		}
-    div#interface a#gg {
-			color: #808080;
-		}
-		
-		div#interface img#sab {
-			position: absolute;
-			opacity: 1;
-			top: 670px;
-			left: 1050px;
-			padding: 0px;
-			margin: 0px;
-		}
-		
-    div#clock {
-			position: absolute;
-			left: 800px; 
-			top: 10px;
-			font-family: 'FonteC', sans-serif;
-			font-size: 15pt;
-			color: #888888;
-
-		}
-		div#interface h3{
-			font-family: 'FonteC', sans-serif;
-			font-size: 15pt;
-			color: #888888;
-		}
-		div#interface img#sfoto{
-			border: 2px solid white;
-			box-shadow: 1px 1px 4px black;
-		}
-		div#interface {
-			font-family: 'FonteC', sans-serif;
-		}
-		div#slide1 {
-			border: 2px solid white;
-			box-shadow: 1px 1px 4px black;
-			position: relative;
-			left: -3px;
-			margin: none;
-			padding: 0px;
-		}
-  * {cursor: url(lightsabergreen2.cur), default;}
-
-  </style>
 </head>
 <body>	
 	<div id="clock">
@@ -216,7 +79,7 @@ document.write('  '+todaysDate);
 	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="120" alt="StarWarsBr" title="StarWarsBr"/> </a>
 <img id="sfoto" src="imagens/sergiopb.jpg" width="100" height="125">
 <p style="background-color:Tomato;">Perfil Profissional.</p>
-<a id="ss" href="profissional.html">Clique aqui para ir a página</a>
+<a id="ee" href="profissional.html">Clique aqui para ir a página</a>
 <p style="background-color:DodgerBlue;">Área de Lazer.</p>
 <a id="dd" href="lazer.html">Clique aqui para ir a página</a>
 <p style="background-color:MediumSeaGreen;">Contato.</p>
