--- a/profissional.html
+++ b/profissional.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<meta charset="UTF-8"/>
 <title>Perfil profissional.</title>
    <style>
-		 @font-face {
-	font-family: 'FonteC';
-	src: url("fontes/bubblegum-sans-regular.otf");
-}
+		
   body{
          background: url("https://i.pinimg.com/736x/7c/b2/9e/7cb29e681ac8c8f5061810de13790b6a--the-matrix-background-images.jpg") fixed;
           color: rgba(0, 0, 0, 1);
@@ -15,41 +13,12 @@
     div#interface {
 	    	width: 900px;
 	    	background-color: #ff6347;
-	    	margin: -20px auto 0px auto;
-	    	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
-	    	padding: 10px 10px 10px 10px;
 			  font-family: 'FonteC';
 	    }
-    h1 {
-			font-family: 'FonteC', sans-serif;
-			font-size: 30pt;
-			color: #606060;
-			text-shadow: 1px 1px 1px rgba(0,0,0,.6);
-			padding: 0px;
-			margin-bottom: 10px;
-		}
         div#interface a#ss:hover {
-      color: red;
+			background-color: #ff6347;
+					border-color: #ff6347;
     }
-     div#interface a#ss {
-			color: #ffffff;
-			text-decoration: none;
-			 text-shadow: 1px 1px 1px #ffffff;
-       transition: color 1s;
-		}
-		 #interface10 span.alternativo{
- display:none;
-}
-#interface10:hover span.alternativo{
-  display:block;
-}
-#interface10 span.normal{
- display:block;
-}
-#interface10:hover span.normal{
-  display:none;
-}
-		 * {cursor: url(lightsabergreen2.cur), default;}
     </style>
   </head>
   <body>
