--- a/index.html
+++ b/index.html
@@ -1,125 +1,173 @@
 <!DOCTYPE html>
 <html>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
-	<meta charset="UTF-8"/>
-<title>Sérgio Pires Barra</title>
+	<meta charset="UTF-8" />
+	<title>Sérgio Pires Barra</title>
 </head>
-<body>	
+
+<body>
 	<div id="clock">
-	<SCRIPT LANGUAGE="JAVASCRIPT">
-<!--
+		<SCRIPT LANGUAGE="JAVASCRIPT">
+			<!--
 
-var now = new Date();
-var mName = now.getMonth() +1 ;
-var dName = now.getDay() +1;
-var dayNr = now.getDate();
-var yearNr=now.getYear();
-if(dName==1) {Day = "Domingo";}
-if(dName==2) {Day = "Segunda-feira";}
-if(dName==3) {Day = "Terça-feira";}
-if(dName==4) {Day = "Quarta-feira";}
-if(dName==5) {Day = "Quinta-feira";}
-if(dName==6) {Day = "Sexta-feira";}
-if(dName==7) {Day = "Sábado";}
-if(mName==1){Month = "Janeiro";}
-if(mName==2){Month = "Fevereiro";}
-if(mName==3){Month = "Março";}
-if(mName==4){Month = "Abril";}
-if(mName==5){Month = "Maio";}
-if(mName==6){Month = "Junho";}
-if(mName==7){Month = "Julho";}
-if(mName==8){Month = "Agosto";}
-if(mName==9){Month = "Setembro";}
-if(mName==10){Month = "Outubro";}
-if(mName==11){Month = "Novembro";}
-if(mName==12){Month = "Dezembro";}
-if(yearNr < 2000) {Year = 1900 + yearNr;}
-else {Year = yearNr;}
-var todaysDate =(" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
+			var now = new Date();
+			var mName = now.getMonth() + 1;
+			var dName = now.getDay() + 1;
+			var dayNr = now.getDate();
+			var yearNr = now.getYear();
+			if (dName == 1) {
+				Day = "Domingo";
+			}
+			if (dName == 2) {
+				Day = "Segunda-feira";
+			}
+			if (dName == 3) {
+				Day = "Terça-feira";
+			}
+			if (dName == 4) {
+				Day = "Quarta-feira";
+			}
+			if (dName == 5) {
+				Day = "Quinta-feira";
+			}
+			if (dName == 6) {
+				Day = "Sexta-feira";
+			}
+			if (dName == 7) {
+				Day = "Sábado";
+			}
+			if (mName == 1) {
+				Month = "Janeiro";
+			}
+			if (mName == 2) {
+				Month = "Fevereiro";
+			}
+			if (mName == 3) {
+				Month = "Março";
+			}
+			if (mName == 4) {
+				Month = "Abril";
+			}
+			if (mName == 5) {
+				Month = "Maio";
+			}
+			if (mName == 6) {
+				Month = "Junho";
+			}
+			if (mName == 7) {
+				Month = "Julho";
+			}
+			if (mName == 8) {
+				Month = "Agosto";
+			}
+			if (mName == 9) {
+				Month = "Setembro";
+			}
+			if (mName == 10) {
+				Month = "Outubro";
+			}
+			if (mName == 11) {
+				Month = "Novembro";
+			}
+			if (mName == 12) {
+				Month = "Dezembro";
+			}
+			if (yearNr < 2000) {
+				Year = 1900 + yearNr;
+			} else {
+				Year = yearNr;
+			}
+			var todaysDate = (" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
 
-document.write('  '+todaysDate);
+			document.write('  ' + todaysDate);
 
-//-->
-</SCRIPT>
+			//-->
+		</SCRIPT>
 
-&nbsp;&nbsp;
-<SPAN ID="Clock">00:00:00</SPAN>
+		&nbsp;&nbsp;
+		<SPAN ID="Clock">00:00:00</SPAN>
 
-<SCRIPT LANGUAGE="JavaScript">
-<!--
-  var Elem = document.getElementById("Clock");
-  function Horario(){ 
-    var Hoje = new Date(); 
-    var Horas = Hoje.getHours(); 
-    if(Horas < 10){ 
-      Horas = "0"+Horas; 
-    } 
-    var Minutos = Hoje.getMinutes(); 
-    if(Minutos < 10){ 
-      Minutos = "0"+Minutos; 
-    } 
-    var Segundos = Hoje.getSeconds(); 
-    if(Segundos < 10){ 
-      Segundos = "0"+Segundos; 
-    } 
-    Elem.innerHTML = Horas+":"+Minutos+":"+Segundos; 
-    } 
-    window.setInterval("Horario()",1000);
-//-->
-</SCRIPT>
+		<SCRIPT LANGUAGE="JavaScript">
+			<!--
+			var Elem = document.getElementById("Clock");
+
+			function Horario() {
+				var Hoje = new Date();
+				var Horas = Hoje.getHours();
+				if (Horas < 10) {
+					Horas = "0" + Horas;
+				}
+				var Minutos = Hoje.getMinutes();
+				if (Minutos < 10) {
+					Minutos = "0" + Minutos;
+				}
+				var Segundos = Hoje.getSeconds();
+				if (Segundos < 10) {
+					Segundos = "0" + Segundos;
+				}
+				Elem.innerHTML = Horas + ":" + Minutos + ":" + Segundos;
+			}
+			window.setInterval("Horario()", 1000);
+			//-->
+		</SCRIPT>
 	</div>
-<div id="interface">
-  <header id="cabecalho">
-<h1>Sérgio Pires Barra</h1>
-  </header>
-	<section id="corpo">
-	<h3>Bem vindo ao meu site!</h3>
-	<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="120" alt="StarWarsBr" title="StarWarsBr"/> </a>
-<img id="sfoto" src="imagens/sergiopb.jpg" width="100" height="125">
-<p style="background-color:Tomato;">Perfil Profissional.</p>
-<a id="ee" href="profissional.html">Clique aqui para ir a página</a>
-<p style="background-color:DodgerBlue;">Área de Lazer.</p>
-<a id="dd" href="lazer.html">Clique aqui para ir a página</a>
-<p style="background-color:MediumSeaGreen;">Contato.</p>
-<a id="ff" href="contato.html">Clique aqui para ir a página</a>
-<p style="background-color:Gray;">Links.</p>
-<a id="gg" href="links.html">Clique aqui para ir a página</a><br>
-		<img src="imagens/glass5.gif" width="35" alt="Z zz..." title="Z zz..."/>
-		<br/>
-	</section>
-	<h2> &nbsp;Minhas Fotos.<h2>
-	<aside id="lateral">
-		<div id="slide1">
-	<div class="w3-content w3-section" style="max-width:600px">
-  <img class="mySlides" src="imagens/IMG1.jpg" style="width:100%">
-  <img class="mySlides" src="imagens/IMG2.jpg" style="width:100%">
-  <img class="mySlides" src="imagens/IMG3.jpg" style="width:100%">
-</div>
-	<script>
-var myIndex = 0;
-carousel();
+	<div id="interface">
+		<header id="cabecalho">
+			<h1>Sérgio Pires Barra</h1>
+		</header>
+		<section id="corpo">
+			<h3>Bem vindo ao meu site!</h3>
+			<a href="http://br.starwars.com/"><img id="sab" src="sabre.gif" width="120" alt="StarWarsBr" title="StarWarsBr"/> </a>
+			<img id="sfoto" src="imagens/sergiopb.jpg" width="100" height="125">
+			<p style="background-color:Tomato;">Perfil Profissional.</p>
+			<a id="ee" href="profissional.html">Clique aqui para ir a página</a>
+			<p style="background-color:DodgerBlue;">Área de Lazer.</p>
+			<a id="dd" href="lazer.html">Clique aqui para ir a página</a>
+			<p style="background-color:MediumSeaGreen;">Contato.</p>
+			<a id="ff" href="contato.html">Clique aqui para ir a página</a>
+			<p style="background-color:Gray;">Links.</p>
+			<a id="gg" href="links.html">Clique aqui para ir a página</a><br>
+			<img id="glass5" src="imagens/glass5.gif" width="35" alt="Z zz..." title="Z zz..." />
+			<br/>
+		</section>
+		<h2> &nbsp;Minhas Fotos.
+			<h2>
+				<aside id="lateral">
+					<div id="slide1">
+						<div class="w3-content w3-section" style="max-width:600px">
+							<img class="mySlides" src="imagens/IMG1.jpg" style="width:100%">
+							<img class="mySlides" src="imagens/IMG2.jpg" style="width:100%">
+							<img class="mySlides" src="imagens/IMG3.jpg" style="width:100%">
+						</div>
+						<script>
+							var myIndex = 0;
+							carousel();
 
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-       x[i].style.display = "none";  
-    }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}    
-    x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 2000); // Change image every 2 seconds
-}
-</script>
+							function carousel() {
+								var i;
+								var x = document.getElementsByClassName("mySlides");
+								for (i = 0; i < x.length; i++) {
+									x[i].style.display = "none";
+								}
+								myIndex++;
+								if (myIndex > x.length) {
+									myIndex = 1
+								}
+								x[myIndex - 1].style.display = "block";
+								setTimeout(carousel, 2000); // Change image every 2 seconds
+							}
+						</script>
+					</div>
+					<p> </p>
+				</aside>
+				<footer id="rodape">
+					<p id="v">visitantes:</p>
+					<a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=php-ubuntu-sergiopires201491269500.codeanyapp.com/dsi/projeto01/index.html&digit=style/plain/1/&reloads=0" alt="www.reliablecounter.com" title="www.reliablecounter.com" border="0"></a>
+				</footer>
 	</div>
-		<p> </p>
-	</aside>
-	<footer id="rodape">
-<p id="v">visitantes:</p>
-<a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=php-ubuntu-sergiopires201491269500.codeanyapp.com/dsi/projeto01/index.html&digit=style/plain/1/&reloads=0" alt="www.reliablecounter.com" title="www.reliablecounter.com" border="0"></a>
-	</footer>
-  </div>
-  </body>
+</body>
+
 </html>
