flexbox links.html

--- a/links.html
+++ b/links.html
@@ -24,7 +24,9 @@
 
 		<h1>Links.</h1>
 		<p>Links de nossos colegas.</p>
-		<ul id="lista" type="square">
+		<ul id="lista" type="none">
+				<div class="flex-container">
+			<li><a href="https://aquilesburlamaqui.github.io/">aquilesburlamaqui</a></li>
 			<li><a href="https://andrielsonsantos.github.io">andrielsonsantos</a></li>
 			<li><a href="https://Jaovv.github.io">Jaovv</a></li>
 			<li><a href="https://joaomcr.github.io">joaomcr</a></li>
@@ -44,7 +46,18 @@
 			<li><a href="https://carlosmirandaf.github.io/">carlosmirandaf</a></li>
 			<li><a href="https://glauberc.github.io/">glauberc</a></li>
 			<li><a href="https://magnusbrigido.github.io/">magnusbrigido</a></li>
+			<li><a href="https://mauriciothiago.github.io/">mauriciothiago</a></li>
+			<li><a href="https://lucasiqueira95.github.io/">lucasiqueira95</a></li>
+			<li><a href="https://ironman1981.github.io/">ironman</a></li>
+			<li><a href="https://rafarneves.github.io/">rafarneves</a></li>
+			<li><a href="https://josenicolasfs.github.io/projeto01/index.html">josenicolasfs</a></li>
+			<li><a href="https://vinniciusl.github.io/">VinniciusL</a></li>
+			<li><a href="https://github.com/sarahamelia34/">sarahamelia34</a></li>
+			<li><a href="https://arturdasilveira.github.io/">arturdasilveira</a></li>
+			<li><a href="https://babschlott.github.io/">babschlott</a></li>
+			</div>
 		</ul>
+
 
 		<div id="interface10">
 			<a id="ss" href="index.html">Voltar.</a>
