--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
-		<title>Sérgio Pires Barra</title>
+        <meta charset="UTF-8"/>
+		<title>Sérgio Pire Barra</title>
 </head>
 
 <body>
