--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
         <meta charset="UTF-8"/>
-		<title>Sérgio Pire Barra</title>
+		<title>Sérgio Pires Barra</title>
 </head>
 
 <body>
