--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-        <a class="navbar-brand" href="imagens/ls.jpg">Logo</a>
+        <a class="navbar-brand" <img src="imagens/ls.jpg"> Logo</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
